# time-spender

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_08_01_0214-b242b1ec30f0_create_user_and_event_tables.py  2024_08_01_1751-eefc16572a83_updated_tg_id_to_int.py
backend/: main.py
backend/api/: __init__.py
backend/api/event/: crud.py  schemas.py  views.py
backend/api/user/: crud.py  schemas.py  views.py
backend/core/: config.py
backend/core/models/: __init__.py  db_helper.py  event.py  user.py
bot/: config.py  main.py
bot/handlers/: __init__.py  comands.py  events_add.py  events_plot.py
bot/middleware/: __init__.py
bot/utils/: fsm.py  messages.py  utils.py
