[tool.poetry]
name = "time-spender"
version = "0.1.0"
description = ""
authors = ["zrow <mrzrow@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
aiogram = "^3.10.0"
sqlalchemy = "^2.0.31"
aiosqlite = "^0.20.0"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
